layout.css
body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background-color: #003594;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #869397;
  height: 36px;
  border: 3px solid #000000;
  border-radius: 10px
}

.nav-ul {
  display: flex;
  width: 400px;
  justify-content: space-between;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  display: block;
}

h3, .nav-list-item a {
  font-weight: normal;
  font-size: 24px;
}

h2 {
  font-weight: bold;
  font-size: 32px;
  color: #041E42;
  text-decoration: underline #000000;
  -webkit-text-stroke: 2px black;
}

.left-nav-div {
  position: relative;
  right: 3px;
  width: 180px;
  height: 36px;
  background-color: #041E42;
  border-radius: 10px;
  border: 3px solid #000000;
}

.left-nav-div h3, .nav-list-item a, legend {
  color: #869397;
  -webkit-text-stroke: 1px black;
  text-align: center;
  height: 35px;
  margin: 0;
  padding-top: 4px;
}

.nav-list-item {
  position: relative;
  left: 3px;
  height: 35px;
  background-color: #041E42;
  border-radius: 10px;
  border: 3px solid #000000;
}

.nav-list-item:hover {
  background-color: #003594;
  border-radius: 10px;
  border: 3px solid #000000;
}

.main-heading-div {
  position: relative;
  bottom: 3px;
  margin: auto;
  width: 85%;
  height: 104px;
  background-color: #041E42;
  border: 3px solid#000000;
  border-radius: 10px;
}

.main-heading {
  text-align: center;
  margin: 0;
  font-weight: bold;
  font-size: 40px;
  color: #869397;
  -webkit-text-stroke: 2px black;
  padding-top: 29.5px;
}

.main-content {
  position: relative;
  bottom: 6px;
  margin: auto;
  width: 85%;
  background-color: #869397;
  border: 3px solid #000000;
  border-radius: 10px;
}

.main-content-header {
  text-align: center;
  margin: 25px 0;
}

.home-top-divs {
  display: flex;
  justify-content: space-between;
  padding-bottom: 54px;
}

.home-right-div, .home-left-div {
  width: 50%;
  border: 3px solid #000000;
  border-radius: 10px;
}

.home-right-div {
  margin-right: 75px;
  margin-left: 20px;
}

.home-left-div {
  margin-left: 75px;
  margin-right: 20px;
}

.home-div-headings {
  text-align: center;
}

.pog-div {
  display: flex;
  justify-content: space-between;
  width: 100%;
  border: none;
  margin: 0 10px;
}

.pog-img {
  width: 100%;
  height: auto;
  display: block;
}

.pog-img-div, .pog-stat-div {
  width: 50%;
  padding-bottom: 20px;
}

.pog-stat-div li, .home-right-div p {
  font-weight: normal;
  font-size: 16px;
}

.pog-img-div label, .pog-stat-div h3 {
  text-align: center;
  font-weight: bold;
  font-size: 24px;
  color: #041E42;
  text-decoration: underline #000000;
  -webkit-text-stroke: 1px black;
}

.pog-img-div label {
  display: block;
  padding: 24px 0;
}

.pog-stat-div {
  margin-right: 10px;
}

.pog-stat-div ul {
  padding-left: 40px;
}

.home-right-div p {
  margin: 20px;
}

.stories-div {
  position: relative;
  margin: auto;
  border: 3px solid #000000;
  border-radius: 10px;
  width: calc(100% - 156px);
  margin-bottom: 44px;
}

.stories-div ul {
  padding: 0;
}

.stories-div a {
  font-size: 24px;
  color: #041E42;
  -webkit-text-stroke: 1px black;
  text-align: center;
}

.stories-div li:hover {
  text-decoration: underline #000000;
}

.fieldset {
  background-color: #041E42;
  border: 4px solid #000000;
  border-radius: 10px;
  width: 75%;
  margin: 50px auto;
}

legend {
  font-weight: normal;
  font-size: 32px;
  padding: 25px;
}

.form-div {
  text-align: center;
}

.input-div label, button[type="submit"] {
  padding: 10px;
  font-size: 26px;
  color: #869397;
  -webkit-text-stroke: 1px black;
}

.input-div {
  padding: 10px;
}

.textarea-label {
  display: block;
}

.input-div input, .input-div textarea, button[type="submit"] {
  background-color: #869397;
  border: 3px solid #000000;
  border-radius: 10px;
}

.input-div textarea {
  height: 100px;
  width: 400px;
  max-width: 687px;
  min-width: 400px;
  max-height: 186px;
  min-height: 100px;
}

button[type="submit"] {
  cursor: pointer;
  color: #041E42;
  margin: 10px 0 25px 0;
}

button[type="submit"]:hover {
  background-color: #003594;
  color: #869397;
}

